--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+HELP.md
+
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -5,6 +7,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -17,6 +20,18 @@ out/
 !**/src/test/**/out/
 
 ### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### STS ###
 .apt_generated
 .classpath
 .factorypath
